# petro-meg-py

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
petro_meg/: __init__.py  writer.py
src/: io.rs  lib.rs  path.rs  reader.rs  version.rs  writer.rs
