[package]
name = "petro-meg-py"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "petro_meg"
crate-type = ["cdylib"]

[dependencies]
petro-meg = "1.0.4"

[dependencies.pyo3]
version = "0.28.2"
features = ["abi3-py310"]
